finished add/reduce stock menu for herbs, weighted average cost per gram formula implemented

--- a/BodyFixTherapiesSystem/BodyFixTherapiesSystem.ui
+++ b/BodyFixTherapiesSystem/BodyFixTherapiesSystem.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1430</width>
-    <height>894</height>
+    <width>1538</width>
+    <height>924</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <item>
     <widget class="QStackedWidget" name="gridStackedWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>6</number>
      </property>
      <widget class="QWidget" name="pageMainMenu">
       <layout class="QGridLayout" name="gridLayoutMain">
@@ -1030,90 +1030,6 @@
       <layout class="QHBoxLayout" name="horizontalLayout_27">
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="6" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_12">
-           <item>
-            <widget class="QLabel" name="lblAHPreferredSupplier">
-             <property name="text">
-              <string>Preferred Supplier: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditAHPreferredSupplier"/>
-           </item>
-          </layout>
-         </item>
-         <item row="7" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_14">
-           <item>
-            <widget class="QPushButton" name="btnAHAddHerbToDatabase">
-             <property name="text">
-              <string>Add Herb to Database</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="btnAHBack">
-             <property name="text">
-              <string>Back</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="4" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_6">
-           <item>
-            <widget class="QLabel" name="lblAHCurrentStockTotal">
-             <property name="text">
-              <string>Current Stock Total: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditAHCurrentStockTotal"/>
-           </item>
-          </layout>
-         </item>
-         <item row="2" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_4">
-           <item>
-            <widget class="QLabel" name="lblAHName">
-             <property name="text">
-              <string>Name: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditAHName"/>
-           </item>
-          </layout>
-         </item>
-         <item row="5" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_7">
-           <item>
-            <widget class="QLabel" name="lblAHCostPerGram">
-             <property name="text">
-              <string>Cost Per Gram: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditAHCostPerGram"/>
-           </item>
-          </layout>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="lblAHAddHerb">
-           <property name="text">
-            <string>Add Herb</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="lblAHBFTInventorySystem">
            <property name="text">
@@ -1138,6 +1054,90 @@
            </item>
           </layout>
          </item>
+         <item row="2" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <item>
+            <widget class="QLabel" name="lblAHName">
+             <property name="text">
+              <string>Name: </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEditAHName"/>
+           </item>
+          </layout>
+         </item>
+         <item row="10" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_14">
+           <item>
+            <widget class="QPushButton" name="btnAHAddHerbToDatabase">
+             <property name="text">
+              <string>Add Herb to Database</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btnAHBack">
+             <property name="text">
+              <string>Back</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="6" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <item>
+            <widget class="QLabel" name="lblAHCostPerGram">
+             <property name="text">
+              <string>Cost Per Gram: </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEditAHCostPerGram"/>
+           </item>
+          </layout>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="lblAHAddHerb">
+           <property name="text">
+            <string>Add Herb</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_12">
+           <item>
+            <widget class="QLabel" name="lblAHPreferredSupplier">
+             <property name="text">
+              <string>Preferred Supplier: </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEditAHPreferredSupplier"/>
+           </item>
+          </layout>
+         </item>
+         <item row="5" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QLabel" name="lblAHCurrentStockTotal">
+             <property name="text">
+              <string>Current Stock Total: </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEditAHCurrentStockTotal"/>
+           </item>
+          </layout>
+         </item>
         </layout>
        </item>
       </layout>
@@ -1146,83 +1146,14 @@
       <layout class="QHBoxLayout" name="horizontalLayout_26">
        <item>
         <layout class="QGridLayout" name="gridLayout_3">
-         <item row="6" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_16">
-           <item>
-            <widget class="QLabel" name="lblEHPreferredSupplier">
-             <property name="text">
-              <string>Preferred Supplier: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditEHPreferredSupplier"/>
-           </item>
-          </layout>
-         </item>
-         <item row="2" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_22">
-           <item>
-            <widget class="QLabel" name="lblEHName">
-             <property name="text">
-              <string>Name: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditEHName"/>
-           </item>
-          </layout>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="lblEHEditHerb">
+         <item row="8" column="0">
+          <widget class="QPushButton" name="btnEHEditStockOfHerb">
            <property name="text">
-            <string>Edit Herb</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <string>Edit Stock of Herb</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_15">
-           <item>
-            <widget class="QLabel" name="lblEHCostPerGram">
-             <property name="text">
-              <string>Cost Per Gram: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditEHCostPerGram"/>
-           </item>
-          </layout>
-         </item>
-         <item row="4" column="0">
-          <layout class="QHBoxLayout" name="horizontalLayout_18">
-           <item>
-            <widget class="QLabel" name="lblEHCurrentStockTotal">
-             <property name="text">
-              <string>Current Stock Total: </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEditEHCurrentStockTotal"/>
-           </item>
-          </layout>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="lblEHBFTInventorySystem">
-           <property name="text">
-            <string>Body Fix Therapies Inventory System</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item row="7" column="0">
+         <item row="10" column="0">
           <layout class="QHBoxLayout" name="horizontalLayout_25">
            <item>
             <widget class="QPushButton" name="btnEHEditHerbInDatabase">
@@ -1258,6 +1189,82 @@
            </item>
            <item>
             <widget class="QLineEdit" name="lineEditEHCategory"/>
+           </item>
+          </layout>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="lblEHBFTInventorySystem">
+           <property name="text">
+            <string>Body Fix Therapies Inventory System</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="lblEHEditHerb">
+           <property name="text">
+            <string>Edit Herb</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_16">
+           <item>
+            <widget class="QLabel" name="lblEHPreferredSupplier">
+             <property name="text">
+              <string>Preferred Supplier: </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEditEHPreferredSupplier"/>
+           </item>
+          </layout>
+         </item>
+         <item row="2" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_22">
+           <item>
+            <widget class="QLabel" name="lblEHName">
+             <property name="text">
+              <string>Name: </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEditEHName"/>
+           </item>
+          </layout>
+         </item>
+         <item row="6" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_15">
+           <item>
+            <widget class="QLabel" name="lblEHCostPerGram">
+             <property name="text">
+              <string>Average Cost Per Gram:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="5" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_18">
+           <item>
+            <widget class="QLabel" name="lblEHCurrentStockTotal">
+             <property name="text">
+              <string>Current Stock Total: </string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -1807,6 +1814,89 @@
            </layout>
           </item>
          </layout>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="pageEditHerbStock">
+      <widget class="QWidget" name="gridLayoutWidget_5">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>9</y>
+         <width>1451</width>
+         <height>891</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_9">
+        <item row="3" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_45">
+          <item>
+           <widget class="QPushButton" name="btnESHAddStock">
+            <property name="text">
+             <string>Add Stock</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btnESHReduceStock">
+            <property name="text">
+             <string>Reduce Stock</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="lblESHBFTInventorySystem">
+          <property name="text">
+           <string>Body Fix Therapies Inventory System</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="lblESHEditStockOfHerb">
+          <property name="text">
+           <string>Edit Stock of Herb</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_44">
+          <item>
+           <widget class="QLabel" name="lblESHCurrentStockTotal">
+            <property name="text">
+             <string>Current Stock Total:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="lblESHAverageCostPerGram">
+            <property name="text">
+             <string>Average Cost Per Gram:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="4" column="0">
+         <widget class="QPushButton" name="btnESHBack">
+          <property name="text">
+           <string>Back</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
